Some attempted changes. Update-Scheme doesn't work properly yet.