@@ -14,7 +14,8 @@ import com.hypixel.hytale.server.core.universe.world.World;
 import com.hypixel.hytale.server.core.universe.world.storage.ChunkStore;
 import org.jspecify.annotations.Nullable;
 
-import java.time.Duration;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.Map;
 
 public class GasNetworkComponent implements BlockNetworkComponent<GasNetworkComponent>, Component<ChunkStore> {
@@ -22,7 +23,6 @@ public class GasNetworkComponent implements BlockNetworkComponent<GasNetworkComp
     public static final double R           = 8.314;
     public static final double TEMPERATURE = 293.0;  // K, fix
     public static final double MIN_AMOUNT  = 1e-10;
-    public static final long   TICK_MS     = 50L;
 
     public static final BuilderCodec<GasNetworkComponent> CODEC;
 
@@ -36,9 +36,9 @@ public class GasNetworkComponent implements BlockNetworkComponent<GasNetworkComp
                 .append(new KeyedCodec<>("Volume",         Codec.DOUBLE),  (c, v) -> c.volume         = v, c -> c.volume).add()
                 .append(new KeyedCodec<>("TargetPressure", Codec.DOUBLE),  (c, v) -> c.targetPressure = v, c -> c.targetPressure).add()
                 .append(new KeyedCodec<>("MaxRate",        Codec.DOUBLE),  (c, v) -> c.maxRate        = v, c -> c.maxRate).add()
+                .append(new KeyedCodec<>("Conductance",    Codec.DOUBLE),  (c, v) -> c.conductance    = v, c -> c.conductance).add()
                 .append(new KeyedCodec<>("IsExtendable",   Codec.BOOLEAN), (c, v) -> c.isExtendable   = v, c -> c.isExtendable).add()
-                .append(new KeyedCodec<>("IsClosed",   Codec.BOOLEAN), (c, v) -> c.isClosed   = v, c -> c.isClosed).add();
-
+                .append(new KeyedCodec<>("IsClosed",       Codec.BOOLEAN), (c, v) -> c.isClosed       = v, c -> c.isClosed).add();
         CODEC = b.build();
     }
 
@@ -47,26 +47,26 @@ public class GasNetworkComponent implements BlockNetworkComponent<GasNetworkComp
     public double volume;          // m³
     public double targetPressure;  // Pa
     public double maxRate;         // mol/s
+    public double conductance;     // mol/(s·Pa)
     public boolean isExtendable;
     public boolean isClosed;
-    public double cachedInletPressure;
 
     public GasNetworkComponent() {
-        this(0, GasNetworkType.NONE, 0, 0, 0, false, false, 0);
+        this(0, GasNetworkType.NONE, 0, 0, 0, 1.0, false, false);
     }
 
     public GasNetworkComponent(double amount, GasNetworkType type,
                                double volume, double targetPressure,
-                               double maxRate, boolean isExtendable,
-                               boolean isClosed, double cachedInletPressure) {
-        this.amount         = amount;
-        this.type           = type;
-        this.volume         = volume;
+                               double maxRate, double conductance,
+                               boolean isExtendable, boolean isClosed) {
+        this.amount        = amount;
+        this.type          = type;
+        this.volume        = volume;
         this.targetPressure = targetPressure;
-        this.maxRate        = maxRate;
-        this.isExtendable   = isExtendable;
-        this.isClosed = isClosed;
-        this.cachedInletPressure = cachedInletPressure;
+        this.maxRate       = maxRate;
+        this.conductance   = conductance;
+        this.isExtendable  = isExtendable;
+        this.isClosed      = isClosed;
     }
 
     public double pressure() {
@@ -74,8 +74,14 @@ public class GasNetworkComponent implements BlockNetworkComponent<GasNetworkComp
         return amount * R * TEMPERATURE / volume;
     }
 
-    @Override
-    public @Nullable Component<ChunkStore> clone() { return copy(); }
+    /** Max flux this node can push out per tick: density × volume = amount (mol). */
+    private double maxFluxPerTick() {
+        return maxRate;
+    }
+
+    // -------------------------------------------------------------------------
+    // BlockNetworkComponent — Arithmetic
+    // -------------------------------------------------------------------------
 
     @Override
     public GasNetworkComponent add(GasNetworkComponent flux) {
@@ -93,112 +99,110 @@ public class GasNetworkComponent implements BlockNetworkComponent<GasNetworkComp
     public GasNetworkComponent mergeComponents(GasNetworkComponent other) {
         amount += other.amount;
         volume += other.volume;
+        conductance += other.conductance;
         return this;
     }
 
-
+    /**
+     * Ohm's law: flux = conductance × ΔP × dt,
+     * capped at [-(to.amount - MIN_AMOUNT), from.amount - MIN_AMOUNT].
+     */
     @Override
-    public GasNetworkComponent calculateFlux(GasNetworkComponent from, GasNetworkComponent to,
+    public GasNetworkComponent calculateFlux(GasNetworkComponent fluxCap,
+                                             GasNetworkComponent from, GasNetworkComponent to,
                                              String fromType, String toType) {
         GasNetworkComponent flux = zero();
-        if (from.isClosed || to.isClosed) return flux;
+        if (from.isClosed || to.isClosed)       return flux;
         if (from.volume <= 0 || to.volume <= 0) return flux;
 
-        return switch (fromType + ":" + toType) {
-            case "Inlet:Outlet" -> {
-                // from-Inlet + to-Outlet: beide pumpen gas to→from
-                // Ziel: p_to - p_from = (from.targetPressure + to.targetPressure) / 2
-                double dPTotal = (from.targetPressure + to.targetPressure) / 2.0;
-                double invFrom = 1.0 / from.volume;
-                double invTo   = 1.0 / to.volume;
-                double eqFrom  = ((from.amount + to.amount) / to.volume - dPTotal / (R * TEMPERATURE))
-                        / (invFrom + invTo);
-                double delta   = (from.amount - eqFrom) * 0.6;
-                double lo = -(to.amount   - MIN_AMOUNT);
-                double hi =  (from.amount - MIN_AMOUNT);
-                if (lo > hi) yield flux;
-                flux.amount = Math.clamp(delta, lo, hi);
-                yield flux;
-            }
-            case "Outlet:Inlet" -> {
-                // from-Outlet + to-Inlet: beide pumpen gas from→to
-                // Ziel: p_from - p_to = (from.targetPressure + to.targetPressure) / 2
-                double dPTotal = (from.targetPressure + to.targetPressure) / 2.0;
-                double invFrom = 1.0 / from.volume;
-                double invTo   = 1.0 / to.volume;
-                double eqFrom  = ((from.amount + to.amount) / to.volume + dPTotal / (R * TEMPERATURE))
-                        / (invFrom + invTo);
-                double delta   = (from.amount - eqFrom) * 0.6;
-                double lo = -(to.amount   - MIN_AMOUNT);
-                double hi =  (from.amount - MIN_AMOUNT);
-                if (lo > hi) yield flux;
-                flux.amount = Math.clamp(delta, lo, hi);
-                yield flux;
-            }
-            case "Inlet:Default", "Default:Inlet" -> {
-                boolean pumpIsFrom = "Inlet".equals(fromType);
-                GasNetworkComponent pump     = pumpIsFrom ? from : to;
-                GasNetworkComponent neighbor = pumpIsFrom ? to   : from;
+        double dP        = from.pressure() - to.pressure();
+        double ohmRaw    = from.conductance * dP;
+        double maxOut    =  from.amount;
+        double maxIn     =  to.amount;
+        double ohmCapped = Math.clamp(ohmRaw, -maxIn, maxOut);
 
-                // Target: p_neighbor - p_pump = dPTarget
-                // => eqNeighbor = (totalAmount/pump.volume + dPTarget/(R*T)) / (1/neighbor.volume + 1/pump.volume)
-                double dPTarget   = pump.targetPressure / 2.0;
-                double invPump    = 1.0 / pump.volume;
-                double invNeighbor= 1.0 / neighbor.volume;
-                double eqNeighbor = (((pump.amount + neighbor.amount) * invPump) + dPTarget / (R * TEMPERATURE))
-                        / (invNeighbor + invPump);
-
-                double delta = (neighbor.amount - eqNeighbor) * 0.6; // positive = neighbor→pump
-
-                double lo = -(pump.amount     - MIN_AMOUNT);
-                double hi =  (neighbor.amount - MIN_AMOUNT);
-                if (lo > hi) yield flux;
-
-                flux.amount = pumpIsFrom ? -Math.clamp(delta, lo, hi) : Math.clamp(delta, lo, hi);
-                yield flux;
-            }
-            case "Outlet:Default", "Default:Outlet" -> {
-                boolean pumpIsFrom = "Outlet".equals(fromType);
-                GasNetworkComponent pump     = pumpIsFrom ? from : to;
-                GasNetworkComponent neighbor = pumpIsFrom ? to   : from;
-
-                // Target: p_pump - p_neighbor = dPTarget
-                // => eqNeighbor = (totalAmount/pump.volume - dPTarget/(R*T)) / (1/neighbor.volume + 1/pump.volume)
-                double dPTarget   = pump.targetPressure / 2.0;
-                double invPump    = 1.0 / pump.volume;
-                double invNeighbor= 1.0 / neighbor.volume;
-                double eqNeighbor = (((pump.amount + neighbor.amount) * invPump) - dPTarget / (R * TEMPERATURE))
-                        / (invNeighbor + invPump);
-
-                double delta = (neighbor.amount - eqNeighbor) * 0.6; // positive = backflow neighbor→pump
-
-                double lo = -(pump.amount     - MIN_AMOUNT);
-                double hi =  (neighbor.amount - MIN_AMOUNT);
-                if (lo > hi) yield flux;
-
-                flux.amount = pumpIsFrom ? -Math.clamp(delta, lo, hi) : Math.clamp(delta, lo, hi);
-                yield flux;
-            }
-            default -> {
-                double totalAmount    = from.amount + to.amount;
-                double totalVolume    = from.volume + to.volume;
-                double eqAmountFrom   = totalAmount * (from.volume / totalVolume);
-                double transfer_ratio = 0.6;
-                double delta          = (from.amount - eqAmountFrom) * transfer_ratio;
-                double lowerBound     = -(to.amount   - MIN_AMOUNT) * transfer_ratio;
-                double upperBound     =  (from.amount - MIN_AMOUNT) * transfer_ratio;
-
-                if (upperBound < lowerBound) yield flux;
-                flux.amount = Math.clamp(delta, lowerBound, upperBound);
-                yield flux;
-            }
-        };
+        // Quellen und Senken erzeugen/vernichten Flux — externer Cap greift nicht.
+        boolean isActiveEdge = from.isActive() || to.isActive();
+        if (isActiveEdge) {
+            double cap = Math.abs(Math.max(from.pressure(), to.pressure()) * Math.min(from.volume, to.volume) / (R * TEMPERATURE));
+            flux.amount = Math.clamp(ohmCapped, -cap, cap);
+        } else {
+            double cap = Math.min(Math.abs(fluxCap.amount), Math.abs(from.pressure() * Math.min(from.volume, to.volume) / (R * TEMPERATURE)));
+            flux.amount = Math.clamp(ohmCapped, -cap, cap);
+        }
+        return flux;
     }
+
+    /**
+     * Distributes total incoming flux evenly across all outgoing edges.
+     * Returns a list parallel to {@code outgoingFlux}.
+     */
+    @SuppressWarnings("unchecked")
+    @Override
+    public List<GasNetworkComponent> divideFluxFlow(
+            List<Map.Entry<String, GasNetworkComponent>> incomingFlux,
+            List<Map.Entry<String, GasNetworkComponent>> outgoingFlux) {
+
+        double totalIn = incomingFlux.stream()
+                .mapToDouble(e -> e.getValue().amount)
+                .sum();
+
+        int    outCount   = outgoingFlux.size();
+        double perOutgoing = outCount > 0 ? totalIn / outCount : 0.0;
+
+        // Cap so we never schedule more out than the node physically holds.
+        double maxPerEdge = maxFluxPerTick() / Math.max(outCount, 1);
+        double capped     = Math.min(perOutgoing, maxPerEdge);
+
+        List<GasNetworkComponent> result = new ArrayList<>(outCount);
+        for (int i = 0; i < outCount; i++) {
+            GasNetworkComponent f = zero();
+            f.amount = capped;
+            result.add(f);
+        }
+        return result;
+    }
+
+    /**
+     * Delay in ticks until net influx changes storage by 0.1 %:
+     * {@code 0.001 × amount / net_influx}.
+     * Returns {@code null} if net influx is zero (no rescheduling needed).
+     */
+    @SuppressWarnings("unchecked")
+    @Override
+    public Integer computeDelay(
+            List<Map.Entry<String, GasNetworkComponent>> incomingFlux,
+            List<Map.Entry<String, GasNetworkComponent>> outgoingFlux) {
+
+        double sumIn  = incomingFlux .stream().mapToDouble(e -> e.getValue().amount).sum();
+        double sumOut = outgoingFlux .stream().mapToDouble(e -> e.getValue().amount).sum();
+        double net    = Math.abs(sumIn - sumOut);
+
+        if (net < MIN_AMOUNT) return null;
+        return (int) Math.max(1, Math.floor(0.001 * amount / net));
+    }
+
+    /**
+     * {@code true} iff net flux is zero (system locally balanced).
+     */
+    @SuppressWarnings("unchecked")
+    @Override
+    public boolean fluxAmountsToZero(
+            List<Map.Entry<String, GasNetworkComponent>> incomingFlux,
+            List<Map.Entry<String, GasNetworkComponent>> outgoingFlux) {
+
+        double sumIn  = incomingFlux .stream().mapToDouble(e -> e.getValue().amount).sum();
+        double sumOut = outgoingFlux .stream().mapToDouble(e -> e.getValue().amount).sum();
+        return Math.abs(sumIn - sumOut) < MIN_AMOUNT;
+    }
+
+    // -------------------------------------------------------------------------
+    // BlockNetworkComponent — Misc.
+    // -------------------------------------------------------------------------
 
     @Override
     public GasNetworkComponent[] partition(int leftSize, int rightSize) {
-        double frac = (leftSize + rightSize > 0)
-                ? (double) leftSize / (leftSize + rightSize) : 0.5;
+        double frac   = (leftSize + rightSize > 0) ? (double) leftSize / (leftSize + rightSize) : 0.5;
         GasNetworkComponent left  = copy(); left.amount  = amount * frac;       left.volume  = volume * frac;
         GasNetworkComponent right = copy(); right.amount = amount * (1 - frac); right.volume = volume * (1 - frac);
         return new GasNetworkComponent[]{ left, right };
@@ -209,41 +213,24 @@ public class GasNetworkComponent implements BlockNetworkComponent<GasNetworkComp
 
     @Override
     public GasNetworkComponent copy() {
-        return new GasNetworkComponent(amount, type, volume, targetPressure, maxRate, isExtendable, isClosed, cachedInletPressure);
+        return new GasNetworkComponent(amount, type, volume, targetPressure,
+                maxRate, conductance, isExtendable, isClosed);
     }
 
     @Override
     public boolean shouldMerge(GasNetworkComponent other) {
-        return this.isExtendable && other.isExtendable && this.type == other.type && this.type == GasNetworkType.PIPE;
+        return this.isExtendable && other.isExtendable
+                && this.type == other.type
+                && this.type == GasNetworkType.PIPE;
     }
 
-
     @Override
-    public void tick(float dt) {
-        if (volume <= 0 || dt <= 0) return;
+    public void tick() {
+        if (volume <= 0) return;
         switch (type) {
-            case SOURCE -> {
-                double target = targetPressure * volume / (R * TEMPERATURE);
-                double deficit = target - amount;
-                if (deficit <= 0) return;
-                amount += Math.min(deficit * 0.5, maxRate * dt);
-            }
-            case SINK -> {
-                double target = targetPressure * volume / (R * TEMPERATURE);
-                double surplus = amount - target;
-                if (surplus <= 0) return;
-                amount = Math.max(MIN_AMOUNT, amount - Math.min(surplus * 0.5, maxRate * dt));
-            }
+            case SOURCE, SINK -> amount = targetPressure * volume / (R * TEMPERATURE);
             default -> {}
         }
-    }
-
-    @Override
-    public Duration computeDelay(float dt, GasNetworkComponent previous, boolean isActive) {
-        double diff = Math.abs(pressure() - previous.pressure());
-        if (diff == 0) return null;
-        double delay = 1e-4f * pressure() / diff * dt; // 0.1% * current / current_change_rate = delay
-        return Duration.ofMillis(Math.round(delay));
     }
 
     @Override
@@ -266,11 +253,21 @@ public class GasNetworkComponent implements BlockNetworkComponent<GasNetworkComp
         };
     }
 
-    @Override
-    public boolean isPipe() { return type == GasNetworkType.PIPE; }
+    @Override public boolean isPipe()             { return type == GasNetworkType.PIPE; }
+    @Override public boolean requiresWorldUpdate() { return false; }
 
     @Override
-    public boolean requiresWorldUpdate() { return false; }
+    public void onWorldUpdate(Vector3i pos, World world) {
+        BlockNetworkComponent.super.onWorldUpdate(pos, world);
+    }
+
+    @Override
+    public @Nullable Component<ChunkStore> clone() { return copy(); }
+
+    @Override
+    public @Nullable Component<ChunkStore> cloneSerializable() {
+        return Component.super.cloneSerializable();
+    }
 
     public static ComponentType<ChunkStore, GasNetworkComponent> getComponentType() {
         return HydrodynamicsPlugin.getInstance().getGasNetworkComponentType();
@@ -280,5 +277,13 @@ public class GasNetworkComponent implements BlockNetworkComponent<GasNetworkComp
     public String toString() {
         return String.format("Amount: %.3f mol  |  Pressure: %.3f bar  |  Volume: %.4f m³  |  Type: %s",
                 amount, pressure() * 1e-5, volume, type);
+    }
+
+    // GasNetworkComponent
+    @Override
+    public GasNetworkComponent negate() {
+        GasNetworkComponent n = copy();
+        n.amount = -n.amount;
+        return n;
     }
 }
